--- a/barbershop-item.html
+++ b/barbershop-item.html
@@ -1,104 +1,120 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Барбершоп «Бородинский»</title>
-  </head>
-  <body>
-    <header class="header">
-      <div class="container">
-        <nav class="navigation">
-          <ul>
-            <li>
-              <a class="logo" href="#">
-                <img src="img/logo.png" width="111" height="24" alt="Barbershop">
-              </a>
-            </li>
-            <li>
-              <a href="#">Информация</a>
-            </li>
-            <li>
-              <a href="#">Новости</a>
-            </li>
-            <li>
-              <a href="#">Прайс-лист</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="user-block">
-          <a class="login" href="#">Вход</a>
-        </div>
+<head>
+  <meta charset="utf-8">
+  <title>Барбершоп «Бородинский»</title>
+</head>
+<body>
+  <header class="header">
+    <div class="container">
+      <nav class="navigation">
+        <ul>
+          <li>
+            <a class="logo" href="#">
+              <img src="img/logo.png" width="111" height="24" alt="Barbershop">
+            </a>
+          </li>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Прайс-лист</a>
+          </li>
+          <li>
+            <a href="#">Магазин</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="user-block">
+        <a class="login" href="#">Вход</a>
       </div>
-    </header>
-    <main class="container">
-      <h1 class="category-title">Набор для путешествий "Baxter of California"</h1>
-      <ul class="breadcrumbs">
-        <li>
-          <a href="#">Главная</a>
-        </li>
-        <li>
-          <a href="#">Магазин</a>
-        </li>
-        <li>
-          <a href="#">Средства для ухода</a>
-        </li>
-        <li>Набор для путешествий "Baxter of California"</li>
-      </ul>
+    </div>
+  </header>
+  <main class="container">
+    <h1 class="category-title">Набор для путешествий "Baxter of California"</h1>
+    <ul class="breadcrumbs">
+      <li>
+        <a href="#">Главная</a>
+      </li>
+      <li>
+        <a href="#">Магазин</a>
+      </li>
+      <li>
+        <a href="#">Средства для ухода</a>
+      </li>
+      <li>Набор для путешествий "Baxter of California"</li>
+    </ul>
+    <div class="product-block">
       <div class="gallery">
         <figure class="gallery-content">
-          <img class="main-img" src="img/travel_kit.jpg" width="460" height="498" alt="travel kit">
-          <img class="img-1" src="img/kit_1.jpg" width="140" height="149" alt="kit-1">
-          <img class="img-2" src="img/kit_2.jpg" width="140" height="149" alt="kit-2">
-          <img class="img-3" src="img/kit_3.jpg" width="140" height="149" alt="kit-3">
+          <div class="main-image">
+            <img src="img/travel_kit.jpg" width="460" height="498" alt="travel kit">
+          </div>
+          <div class="small-image">
+            <div class="small-image-1">
+              <img src="img/kit_1.jpg" width="140" height="149" alt="kit-1">
+            </div>
+            <div class="small-image-2">
+              <img src="img/kit_2.jpg" width="140" height="149" alt="kit-2">
+            </div>
+            <div class="small-image-3">
+              <img src="img/kit_3.jpg" width="140" height="149" alt="kit-3">
+            </div>
+          </div>
         </figure>
       </div>
       <div class="discribe-block">
-        <span class="in-stock">Есть в наличии</span>
-        <span class="code">Артикул: Dexter-AE</span>
-        <p class="discribe-text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-      </div>
-      <div class="buy-block">
-        <span class="price">2 900 руб.</span>
-        <a class="buy-button" href="#">Купить</a>
-      </div>
-      <div class="included-set">
-        <h2 class="included-set-title">В набор входят:</h2>
-        <ul class="included-set-list">
-          <li>Средство для умывания (50 мл)</li>
-          <li>Увлажняющий крем (50 мл)</li>
-          <li>Крем для бритья (50 мл)</li>
-          <li>Крем после бритья, шампунь (50 мл)</li>
-          <li>Удобная кожаная косметичка</li>
-        </ul>
-      </div>
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-contacts">
-          Барбершоп "Бородинский"<br>
-          Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-          <a href="#">Как нас найти?</a><br>
-          Телефон: +7 (495) 666-02-66
+        <div class="discription">
+          <div class="attributes">
+            <span class="in-stock">Есть в наличии</span>
+            <span class="code">Артикул: Dexter-AE</span>
+          </div>
+          <p class="discription-text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
         </div>
-        <div class="footer-social">
-          <p>Давайте дружить!
+        <div class="buy-block">
+          <span class="price">2 900 руб.</span>
+          <a class="buy-button" href="#">Купить</a>
+        </div>
+        <div class="included-set">
+          <h2 class="included-set-title">В набор входят:</h2>
+          <ul class="included-set-list">
+            <li>Средство для умывания (50 мл)</li>
+            <li>Увлажняющий крем (50 мл)</li>
+            <li>Крем для бритья (50 мл)</li>
+            <li>Крем после бритья, шампунь (50 мл)</li>
+            <li>Удобная кожаная косметичка</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-contacts">
+        Барбершоп "Бородинский"<br>
+        Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+        <a href="#">Как нас найти?</a><br>
+        Телефон: +7 (495) 666-02-66
+      </div>
+      <div class="footer-social">
+        <p>Давайте дружить!
           <a class="social-btn social btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social btn-inst" href="#">Инстаграм</a>
-          </p>
-        </div>
-        <div class="footer-copyright">
-          <p>Разработано:
-          <a class="btn" href="https://htmlacademy.ru">Html Academy</a>
-          </p>
-        </div>
+        </p>
       </div>
-    </footer>
-  </body>
+      <div class="footer-copyright">
+        <p>Разработано:
+          <a class="btn" href="https://htmlacademy.ru">Html Academy</a>
+        </p>
+      </div>
+    </div>
+  </footer>
+</body>
 </html>
